--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -1,4 +1,4 @@
-<div ng-controller="GroupController" ng-init="getGroups()">
+<div ng-controller="GroupsController" ng-init="getGroups()">
     <form class="form-horizontal row-fluid">
         <h2 translate="tatami.menu.groups"></h2>
 
