--- a/src/main/webapp/app/components/account/password/PasswordView.html
+++ b/src/main/webapp/app/components/account/password/PasswordView.html
@@ -2,34 +2,27 @@
     <form class="form-horizontal row-fluid">
         <h2 translate="tatami.password"></h2>
         <div ng-show="status.confirmChange" class="jGrowl-notification ui-state-highlight ui-corner-all alert-success" style="display: block;">
-            <div class="jGrowl-close">×</div><div class="jGrowl-header">
-
+            <div class="jGrowl-close">×</div>
+            <div class="jGrowl-header">
             </div>
             <div class="jGrowl-message">The form has been successfully saved.</div>
         </div>
-
         <fieldset>
             <legend translate="tatami.user.password.legend"></legend>
-
             <div class="control-group">
                 <label class="control-label" translate="tatami.user.password.old"></label>
-
                 <div class="controls">
                     <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.oldPassword">
                 </div>
             </div>
-
             <div class="control-group">
                 <label class="control-label" translate="tatami.user.password.new"></label>
-
                 <div class="controls">
                     <input type="password" required="required" ize="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPassword">
                 </div>
             </div>
-
             <div class="control-group">
                 <label class="control-label" translate="tatami.user.password.confirm"></label>
-
                 <div class="controls">
                     <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
                 </div>
