disabled HTML5 History API, fixed timeline routing

--- a/src/main/webapp/app/components/home/timeline/TimelinePartial.html
+++ b/src/main/webapp/app/components/home/timeline/TimelinePartial.html
@@ -1,19 +1,19 @@
 <div>
     <ul class="homebody-nav nav nav-justified">
         <li class="active">
-            <a href="#timeline">
+            <a href="#/home/timeline">
             <i class="glyphicon glyphicon-th-list"></i>
             <span translate="tatami.timeline"></span>
             </a>
         </li>
         <li>
-            <a href="#mentions">
+            <a href="#/home/mentions">
             <i class="glyphicon glyphicon-user"></i>
             <span translate="tatami.home.mentions"></span>
             </a>
         </li>
         <li>
-            <a href="#favorites">
+            <a href="#/home/favorites">
             <i class="glyphicon glyphicon-star"></i>
             <span translate="tatami.home.favorites"></span>
             </a>
