--- a/src/main/webapp/app/components/home/timeline/TimelinePartial.html
+++ b/src/main/webapp/app/components/home/timeline/TimelinePartial.html
@@ -101,7 +101,7 @@
                                             <i class="glyphicon glyphicon-comment"></i>
                                             <span translate="tatami.status.reply"></span>
                                         </button>
-                                        <button ng-if="status.username == profile.username" class="btn-link status-action status-action-delete button-ios">
+                                        <button ng-if="status.username == profile.username" class="btn-link status-action status-action-delete button-ios" ng-click="deleteStatus(status)">
                                             <i class="glyphicon glyphicon-trash"></i>
                                             <span translate="tatami.status.delete"></span>
                                         </button>
@@ -109,7 +109,7 @@
                                             <i class="glyphicon glyphicon-retweet"></i>
                                             <span translate="tatami.status.share"></span>
                                         </button>
-                                        <button class="btn-link status-action status-action-favorite button-ios" ng-click="favorite(status.statusId, status.favorite, $index)">
+                                        <button class="btn-link status-action status-action-favorite button-ios" ng-click="favoriteStatus(status)">
                                             <i class="glyphicon glyphicon-star"></i>
                                             <span translate="tatami.status.favorite"></span>
                                         </button>
