--- a/src/main/webapp/app/components/home/TimelineView.html
+++ b/src/main/webapp/app/components/home/TimelineView.html
@@ -6,7 +6,7 @@
 </div>
 -->
 
-<div class="row">
+<div ng-init="showSearchAccountPost = true" class="row">
     <aside id="tatamiSide" ng-include="'/app/components/home/sidebar/SidebarPartial.html'" class="col-span-3"></aside>
     <section id="tatamiBody" ng-include="'/app/components/home/timeline/TimelinePartial.html'" class="col-span-7"></section>
 </div>
