made some text in toe and license translatable

--- a/src/main/webapp/app/components/about/LicensePartial.html
+++ b/src/main/webapp/app/components/about/LicensePartial.html
@@ -1,5 +1,5 @@
 <div class="col-offset-2 col-span-8">
-    <h1>Source Code License</h1>
+    <h1 translate>tatami.menu.about.license</h1>
     <p>
         Copyright 2012
         <a href="http://www.ippon.fr">Ippon Technologies</a>
