--- a/src/main/webapp/app/components/about/TermsPartial.html
+++ b/src/main/webapp/app/components/about/TermsPartial.html
@@ -1,8 +1,8 @@
-<!-- Update the link to the TOS under the General section once the angular version is hosted by Ippon. -->
+<!-- Update the link to the TOS under the General section once the AngularJS version is hosted by Ippon. -->
 
 <div>
     <!-- class="col-offset-2 col-span-8" -->
-    <h1>Terms of Service / Conditions générales d'utilisation</h1>
+    <h1 translate="tatami.menu.about.tos"></h1>
     <h2>1 - General</h2>
     <ol>
         <li>By using any of the Ippon Technologies products, software, or services available at *.ippon.fr (collectively referred to as "Services") provided by Ippon Techonologies ("Ippon"), you agree to be bound by the following terms and conditions ("Terms of Service").</li>
