fixed hover text not showing on some modal icons

--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -11,7 +11,7 @@
 
                 <div class="controls">
                     <div id="updateAvatar" class="dropzone well">
-                        <img class="nomargin avatar" src="/tatami/avatar/a680b880-62d4-11e4-b975-f8165431c969/photo.jpg" alt="">
+                        <img class="nomargin avatar" src="/tatami/avatar/a680b880-62d4-11e4-b975-f8165431c969/photo.jpg">
                         <p class="little-padding-top">Drop your photo here to update it</p>
                         <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
                     </div>
